--- a/index.html
+++ b/index.html
@@ -1,83 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Juan Antonio Garcia | CV</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>John Smith | Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
+<header>
+    <img src="https://via.placeholder.com/120" alt="Photo" class="photo">
+    <h1>Juan Antonio Garcia</h1>
+    <p>Desarrollador Full Stack & Técnico en Logística</p>
+</header>
 
-  <body>
-    <header>
-      <h1>John Smith</h1>
-      <p id="position">Software Engineer</p>
-    </header>
+<section>
+    <h2>Sobre mí</h2>
+    <p>
+        Desarrollador Full Stack y Técnico en Logística con más de 5 años de experiencia en manejo de sistemas WMS, 
+        automatización de procesos con Python y gestión de inventarios. Apasionado por la tecnología y el aprendizaje continuo.
+    </p>
+</section>
 
-    <section>
-      <h2>Summary</h2>
-      <p class="summary">
-        <img
-          src="https://cdn2.iconfinder.com/data/icons/avatars-99/62/avatar-370-456322-512.png"
-          width="80px"
-          alt="John Smith Avatar"
-        />
-        Deadline-oriented software engineer with lots of experience. Solid
-        track record of architecting solutions that exceed client expectations.
-      </p>
-    </section>
+<section>
+    <h2>Contacto</h2>
+    <p class="contact">
+        <a href="mailto:jjuanangvazquez@gmail.com">jjuanangvazquez@gmail.com</a><br>
+        <a href="https://github.com/nunjabes" target="_blank">github.com/nunjabes</a><br>
+        <a href="https://linkedin.com/in/juan-antonio-garcia-vazquez" target="_blank">LinkedIn</a>
+    </p>
+</section>
 
-    <section>
-      <h2>Experience</h2>
-      <ul id="experience">
-        <li><b>Senior Software Engineer - Google</b> | 2018 - Present</li>
-        <li><b>Software Engineer - Facebook</b> | 2016 - 2018</li>
-      </ul>
-    </section>
+<section>
+    <h2>Experiencia Laboral</h2>
+    <ul>
+        <li><b>Troa Librerías</b> - Administración y Logística (2024 - Actualidad)</li>
+        <li><b>Grupo JPG</b> - Operario Logístico (2024 - Actualidad)</li>
+        <li><b>Cerrobot</b> - Profesor de Robótica y Domótica (2018 - Actualidad)</li>
+        <li><b>Decathlon Internacional</b> - Oficial de Logística (2021 - 2022)</li>
+    </ul>
+</section>
 
-    <section>
-      <h2>Skills</h2>
-      <table id="skills">
+<section>
+    <h2>Habilidades</h2>
+    <table class="skills-table">
         <tr>
-          <th>Skill</th>
-          <th>Level</th>
+            <th>Habilidad</th>
+            <th>Nivel</th>
         </tr>
         <tr>
-          <td>HTML</td>
-          <td>Expert</td>
+            <td>Python</td>
+            <td>Avanzado</td>
         </tr>
         <tr>
-          <td>CSS</td>
-          <td>Intermediate</td>
+            <td>HTML / CSS</td>
+            <td>Intermedio</td>
         </tr>
-      </table>
-    </section>
+        <tr>
+            <td>SQL</td>
+            <td>Avanzado</td>
+        </tr>
+    </table>
+</section>
 
-    <section>
-      <h2>Contact Form</h2>
-      <form id="contact-form">
-        <label for="name">Name: </label>
-        <input placeholder="Name" id="name" type="text" required /><br />
-        <label for="email">Email: </label>
-        <input placeholder="Email" id="email" type="email" required /><br />
-        <label for="message">Message: </label>
-        <textarea id="message" placeholder="Message" required></textarea><br />
-        <input type="submit" value="SEND" />
-      </form>
-      <p id="form-response" style="color: green; display: none;">
-        Thank you for contacting us!
-      </p>
-    </section>
+<section>
+    <h2>Idiomas</h2>
+    <ul>
+        <li>Español: Nativo</li>
+        <li>Inglés: B2</li>
+        <li>Alemán: B1</li>
+        <li>Chino Mandarín: HSK3</li>
+    </ul>
+</section>
 
-    <footer>
-      <h2>Contacts</h2>
-      <ul id="contacts">
-        <li><a href="link1" target="_blank">Sololearn</a></li>
-        <li><a href="link2" target="_blank">LinkedIn</a></li>
-      </ul>
-      <p id="copyright">Copyright &copy; John Smith</p>
-    </footer>
+<footer>
+    <p>Juan Antonio García | 2025</p>
+</footer>
+  
+<button id="print-cv">Imprimir Currículum</button>
+<button id="toggle-theme">Modo Oscuro</button>
 
-    <script src="script.js"></script>
-  </body>
+</body>
 </html>
