Añadido de más funciones, en este caso, en la carta de presentación

--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
 </section>
 
 <section>
+    <h2 id="presentation-title">Carta de Presentación</h2>
+    <p id="cover-letter" class="hidden">
+        Soy un apasionado desarrollador Full Stack con experiencia en logística y automatización de procesos. 
+        Me encanta resolver problemas y aprender nuevas tecnologías. Mi objetivo es seguir creciendo en el 
+        mundo de la tecnología y aportar soluciones innovadoras.
+    </p>
+</section>
+
+<section>
     <h2>Contacto</h2>
     <p class="contact">
         <a href="mailto:jjuanangvazquez@gmail.com">jjuanangvazquez@gmail.com</a><br>
