Cambios y añadidos en la estructura del index y su contenido

--- a/index.html
+++ b/index.html
@@ -10,22 +10,15 @@
 
 <header>
     <img src="https://via.placeholder.com/120" alt="Photo" class="photo">
-    <h1>Juan Antonio Garcia</h1>
+    <h1>Juan Antonio García Vázquez</h1>
     <p>Desarrollador Full Stack & Técnico en Logística</p>
 </header>
 
 <section>
-    <h2>Sobre mí</h2>
-    <p>
-        Desarrollador Full Stack y Técnico en Logística con más de 5 años de experiencia en manejo de sistemas WMS, 
-        automatización de procesos con Python y gestión de inventarios. Apasionado por la tecnología y el aprendizaje continuo.
-    </p>
-</section>
-
-<section>
-    <h2 id="presentation-title">Carta de Presentación</h2>
+    <h2 id="presentation-title">Presentación</h2>
     <p id="cover-letter" class="hidden">
-        Soy un apasionado desarrollador Full Stack con experiencia en logística y automatización de procesos. 
+        Desarrollador Full Stack y Técnico en Logística con más de 5 años de experiencia en manejo de sistemas WMS, 
+        automatización de procesos con Python y gestión de inventarios. Apasionado por la tecnología y el aprendizaje continuo. Soy un apasionado desarrollador Full Stack con experiencia en logística y automatización de procesos. 
         Me encanta resolver problemas y aprender nuevas tecnologías. Mi objetivo es seguir creciendo en el 
         mundo de la tecnología y aportar soluciones innovadoras.
     </p>
@@ -37,6 +30,7 @@
         <a href="mailto:jjuanangvazquez@gmail.com">jjuanangvazquez@gmail.com</a><br>
         <a href="https://github.com/nunjabes" target="_blank">github.com/nunjabes</a><br>
         <a href="https://linkedin.com/in/juan-antonio-garcia-vazquez" target="_blank">LinkedIn</a>
+      <a href="https://www.infojobs.net/candidate/cv/view/index.xhtml" target="_blank">InfoJobs</a><br>
     </p>
 </section>
 
@@ -47,11 +41,11 @@
         <li><b>Grupo JPG</b> - Operario Logístico (2024 - Actualidad)</li>
         <li><b>Cerrobot</b> - Profesor de Robótica y Domótica (2018 - Actualidad)</li>
         <li><b>Decathlon Internacional</b> - Oficial de Logística (2021 - 2022)</li>
-    </ul>
+      <li><b>Cerrobot | Prof. de Robótica</b> - Robótica aplicada a la enseñanza (2018 - Actualidad)</li>
 </section>
 
 <section>
-    <h2>Habilidades</h2>
+    <h2>Habilidades Técnicas</h2>
     <table class="skills-table">
         <tr>
             <th>Habilidad</th>
@@ -59,7 +53,7 @@
         </tr>
         <tr>
             <td>Python</td>
-            <td>Avanzado</td>
+            <td>Intermedio</td>
         </tr>
         <tr>
             <td>HTML / CSS</td>
@@ -67,11 +61,40 @@
         </tr>
         <tr>
             <td>SQL</td>
-            <td>Avanzado</td>
+            <td>Intermedio</td>
+        </tr>
+        <tr>
+            <td>Pentesting</td>
+            <td>Intermedio</td>
         </tr>
     </table>
 </section>
-
+  <section>
+    <h2>Datos Académicos</h2>
+    <ul>
+      <li><strong>Desarrollador Full Stack y Desarrollador de Aplicaciones Web | KeepCoding | 2022 - 2023 </strong></li>
+      <p> BootCamp con desarrollo durante un año para la formación en
+ Full Stack Web Developer, aprendiendo y ejecutando
+ tecnologías y herramientas aplicadas a la programación.
+ Desarrollé programas tanto para la aplicación en Frontend
+ como en Backend con resultados favorables. Adquirí
+ conocimientos para avanzar en mi labor como programador</p>
+      <li><strong> Técnico en Emergencias Sanitarias
+</strong></li>
+      <p>Formación Profesional | 2019</p>
+      <li><strong> Swiftwater and Flood Rescue Technician</strong></li>
+      <p> Rescue 3 International | 2022</p>
+       <li><strong> Remote Pilot Certificate of Theorical Knowledge
+</strong></li>
+      <p> ESA / European Union Aviation Safety Agency | 2022
+</p>
+      
+         <li><strong> Buceador de Rescate
+</strong></li>
+      <p> Certificado PADI y FEDAS</p>
+      
+    </ul>
+  </section>
 <section>
     <h2>Idiomas</h2>
     <ul>
