--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <p class="contact">
         <a href="mailto:jjuanangvazquez@gmail.com">jjuanangvazquez@gmail.com</a><br>
         <a href="https://github.com/nunjabes" target="_blank">github.com/nunjabes</a><br>
-        <a href="https://linkedin.com/in/juan-antonio-garcia-vazquez" target="_blank">LinkedIn</a>
-      <a href="https://www.infojobs.net/candidate/cv/view/index.xhtml" target="_blank">InfoJobs</a><br>
+        <a href="https://linkedin.com/in/juan-antonio-garcia-vazquez" target="_blank">LinkedIn</a><br>
+        <a href="https://www.infojobs.net/candidate/cv/view/index.xhtml" target="_blank">InfoJobs</a>
     </p>
 </section>
 
@@ -41,7 +41,8 @@
         <li><b>Grupo JPG</b> - Operario Logístico (2024 - Actualidad)</li>
         <li><b>Cerrobot</b> - Profesor de Robótica y Domótica (2018 - Actualidad)</li>
         <li><b>Decathlon Internacional</b> - Oficial de Logística (2021 - 2022)</li>
-      <li><b>Cerrobot | Prof. de Robótica</b> - Robótica aplicada a la enseñanza (2018 - Actualidad)</li>
+        <li><b>Cerrobot | Prof. de Robótica</b> - Robótica aplicada a la enseñanza (2018 - Actualidad)</li>
+    </ul>
 </section>
 
 <section>
@@ -69,32 +70,25 @@
         </tr>
     </table>
 </section>
-  <section>
+
+<section>
     <h2>Datos Académicos</h2>
     <ul>
-      <li><strong>Desarrollador Full Stack y Desarrollador de Aplicaciones Web | KeepCoding | 2022 - 2023 </strong></li>
-      <p> BootCamp con desarrollo durante un año para la formación en
- Full Stack Web Developer, aprendiendo y ejecutando
- tecnologías y herramientas aplicadas a la programación.
- Desarrollé programas tanto para la aplicación en Frontend
- como en Backend con resultados favorables. Adquirí
- conocimientos para avanzar en mi labor como programador</p>
-      <li><strong> Técnico en Emergencias Sanitarias
-</strong></li>
-      <p>Formación Profesional | 2019</p>
-      <li><strong> Swiftwater and Flood Rescue Technician</strong></li>
-      <p> Rescue 3 International | 2022</p>
-       <li><strong> Remote Pilot Certificate of Theorical Knowledge
-</strong></li>
-      <p> ESA / European Union Aviation Safety Agency | 2022
-</p>
-      
-         <li><strong> Buceador de Rescate
-</strong></li>
-      <p> Certificado PADI y FEDAS</p>
-      
+        <li><strong>Desarrollador Full Stack y Desarrollador de Aplicaciones Web | KeepCoding | 2022 - 2023</strong></li>
+        <p>BootCamp con desarrollo durante un año para la formación en Full Stack Web Developer, aprendiendo y ejecutando
+        tecnologías y herramientas aplicadas a la programación. Desarrollé programas tanto para la aplicación en Frontend
+        como en Backend con resultados favorables. Adquirí conocimientos para avanzar en mi labor como programador.</p>
+        <li><strong>Técnico en Emergencias Sanitarias</strong></li>
+        <p>Formación Profesional | 2019</p>
+        <li><strong>Swiftwater and Flood Rescue Technician</strong></li>
+        <p>Rescue 3 International | 2022</p>
+        <li><strong>Remote Pilot Certificate of Theorical Knowledge</strong></li>
+        <p>ESA / European Union Aviation Safety Agency | 2022</p>
+        <li><strong>Buceador de Rescate</strong></li>
+        <p>Certificado PADI y FEDAS</p>
     </ul>
-  </section>
+</section>
+
 <section>
     <h2>Idiomas</h2>
     <ul>
@@ -108,9 +102,11 @@
 <footer>
     <p>Juan Antonio García | 2025</p>
 </footer>
-  
+
 <button id="print-cv">Imprimir Currículum</button>
 <button id="toggle-theme">Modo Oscuro</button>
+
+<script src="script.js"></script>
 
 </body>
 </html>
